--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "~10.0.0",
+    "@angular/cdk": "^10.2.7",
     "@angular/common": "~10.0.0",
     "@angular/core": "~10.0.0",
     "@angular/forms": "~10.0.0",
     "@angular/localize": "^10.0.14",
+    "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "@awesome-cordova-plugins/youtube-video-player": "^5.39.0",
     "@capacitor/android": "^2.4.2",
     "@capacitor/core": "2.4.2",
     "@ionic-native/core": "^5.0.0",
@@ -28,6 +32,7 @@
     "@ionic-native/web-intent": "^5.28.0",
     "@ionic/angular": "^5.0.0",
     "com-darryncampbell-cordova-plugin-intent": "^2.0.0",
+    "cordova-plugin-youtube-video-player": "^2.4.0",
     "ngx-webstorage": "^6.0.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
